Split language jsons into seperate lines
For easier git updating

--- a/Assets/StreamingAssets/Languages/German.json
+++ b/Assets/StreamingAssets/Languages/German.json
@@ -1,1 +1,20 @@
-{"items":[{"key":"name", "value":"Deutsch"},{"key":"control.key", "value":"GEBRAUCHT DIE TASTATUR"},{"key":"control.mouse", "value":"GEBRAUCHT DIE MAUS"},{"key":"stage.speedup", "value":"SCHNELLER!"},{"key":"key", "value":"BOSS ABSCHNITT!"},{"key":"stage.levelup", "value":"HERAUFSCHRAUBEN!"},{"key":"microgame.FreezeFrogs.command", "value":"Friere!"},{"key":"microgame.Slingshot.command", "value":"Wurf!"},{"key":"microgame.Spider.command", "value":"Mahlzeit!"},{"key":"microgame.Donation.command", "value":"Sammle 3!"},{"key":"microgame.Wrench.command", "value":"Mache Fest!"},{"key":"microgame.Potion.command", "value":"Vorbeischauen!"},{"key":"microgame.GhostFood.command", "value":"Essen und abkauen"},{"key":"microgame.Spaceship.command", "value":"Start!"},{"key":"microgame.CupShuffle.command", "value":"Achtgeben!"},{"key":"microgame.TraceShape.command", "value":"Auffüllen"},{"key":"microgame.Potion.ingredients", "value":"Zutaten"},{"key":"microgame.CupShuffle.command.b", "value":"Heraussuchen!"}]}
+{"items":[
+{"key":"name", "value":"Deutsch"},
+{"key":"control.key", "value":"GEBRAUCHT DIE TASTATUR"},
+{"key":"control.mouse", "value":"GEBRAUCHT DIE MAUS"},
+{"key":"stage.speedup", "value":"SCHNELLER!"},
+{"key":"key", "value":"BOSS ABSCHNITT!"},
+{"key":"stage.levelup", "value":"HERAUFSCHRAUBEN!"},
+{"key":"microgame.FreezeFrogs.command", "value":"Friere!"},
+{"key":"microgame.Slingshot.command", "value":"Wurf!"},
+{"key":"microgame.Spider.command", "value":"Mahlzeit!"},
+{"key":"microgame.Donation.command", "value":"Sammle 3!"},
+{"key":"microgame.Wrench.command", "value":"Mache Fest!"},
+{"key":"microgame.Potion.command", "value":"Vorbeischauen!"},
+{"key":"microgame.GhostFood.command", "value":"Essen und abkauen"},
+{"key":"microgame.Spaceship.command", "value":"Start!"},
+{"key":"microgame.CupShuffle.command", "value":"Achtgeben!"},
+{"key":"microgame.TraceShape.command", "value":"Auffüllen"},
+{"key":"microgame.MasterSparkCode.command", "value":"Verzaubere!"},
+{"key":"microgame.Potion.ingredients", "value":"Zutaten"},
+{"key":"microgame.CupShuffle.command.b", "value":"Heraussuchen!"}]}
