--- a/Assets/StreamingAssets/Languages/Portugese.json
+++ b/Assets/StreamingAssets/Languages/Portugese.json
@@ -1,1 +1,18 @@
-{"items":[{"key":"name", "value":"Português"},{"key":"control.key", "value":"USE AS TECLAS"},{"key":"control.mouse", "value":"USE O MOUSE"},{"key":"stage.speedup", "value":"MAIS RÁPIDO!"},{"key":"key", "value":"FASE DO MESTRE"},{"key":"stage.levelup", "value":"NÍVEL AUMENTADO!"},{"key":"microgame.FreezeFrogs.command", "value":"Congele!"},{"key":"microgame.Slingshot.command", "value":"Arremesse!"},{"key":"microgame.Spider.command", "value":"Alimente!"},{"key":"microgame.Donation.command", "value":"Colete 3!"},{"key":"microgame.Wrench.command", "value":"Parafuse!"},{"key":"microgame.Potion.command", "value":"Jogue dentro!"},{"key":"microgame.GhostFood.command", "value":"Coma e mastigue!"},{"key":"microgame.Spaceship.command", "value":"Lance!"},{"key":"microgame.TraceShape.command", "value":"Preencha!"},{"key":"microgame.Potion.ingredients", "value":"Ingredientes"}]}
+{"items":[
+{"key":"name", "value":"Português"},
+{"key":"control.key", "value":"USE AS TECLAS"},
+{"key":"control.mouse", "value":"USE O MOUSE"},
+{"key":"stage.speedup", "value":"MAIS RÁPIDO!"},
+{"key":"key", "value":"FASE DO MESTRE"},
+{"key":"stage.levelup", "value":"NÍVEL AUMENTADO!"},
+{"key":"microgame.FreezeFrogs.command", "value":"Congele!"},
+{"key":"microgame.Slingshot.command", "value":"Arremesse!"},
+{"key":"microgame.Spider.command", "value":"Alimente!"},
+{"key":"microgame.Donation.command", "value":"Colete 3!"},
+{"key":"microgame.Wrench.command", "value":"Parafuse!"},
+{"key":"microgame.Potion.command", "value":"Jogue dentro!"},
+{"key":"microgame.GhostFood.command", "value":"Coma e mastigue!"},
+{"key":"microgame.Spaceship.command", "value":"Lance!"},
+{"key":"microgame.TraceShape.command", "value":"Preencha!"},
+{"key":"microgame.MasterSparkCode.command", "value":"Atire!"},
+{"key":"microgame.Potion.ingredients", "value":"Ingredientes"}]}
