--- a/Assets/StreamingAssets/Languages/Serbian.json
+++ b/Assets/StreamingAssets/Languages/Serbian.json
@@ -1,1 +1,14 @@
-{"items":[{"key":"name", "value":"Srpski"},{"key":"control.key", "value":"KORISTI TASTATURU"},{"key":"control.mouse", "value":"KORISTI MIŠ"},{"key":"microgame.FreezeFrogs.command", "value":"Zamrzni!"},{"key":"microgame.Slingshot.command", "value":"Ispali!"},{"key":"microgame.Spider.command", "value":"Nahrani!"},{"key":"microgame.Donation.command", "value":"Sakupi 3!"},{"key":"microgame.Wrench.command", "value":"Pričvrsti!"},{"key":"microgame.Potion.command", "value":"Ubaci!"},{"key":"microgame.GhostFood.command", "value":"Ćapi i sažvaći!"},{"key":"microgame.Spaceship.command", "value":"Ispali!"},{"key":"microgame.TraceShape.command", "value":"Ispuni!"}]}
+{"items":[
+{"key":"name", "value":"Srpski"},
+{"key":"control.key", "value":"KORISTI TASTATURU"},
+{"key":"control.mouse", "value":"KORISTI MIŠ"},
+{"key":"microgame.FreezeFrogs.command", "value":"Zamrzni!"},
+{"key":"microgame.Slingshot.command", "value":"Ispali!"},
+{"key":"microgame.Spider.command", "value":"Nahrani!"},
+{"key":"microgame.Donation.command", "value":"Sakupi 3!"},
+{"key":"microgame.Wrench.command", "value":"Pričvrsti!"},
+{"key":"microgame.Potion.command", "value":"Ubaci!"},
+{"key":"microgame.GhostFood.command", "value":"Ćapi i sažvaći!"},
+{"key":"microgame.Spaceship.command", "value":"Ispali!"},
+{"key":"microgame.TraceShape.command", "value":"Ispuni!"},
+{"key":"microgame.MasterSparkCode.command", "value":"Baci čaroliju!"}]}
