Update languages as of 3/2/17

--- a/Assets/StreamingAssets/Languages/English.json
+++ b/Assets/StreamingAssets/Languages/English.json
@@ -16,12 +16,15 @@
 {"key":"microgame.Spaceship.command", "value":"Blast off!"},
 {"key":"microgame.CupShuffle.command", "value":"Pay Attention!"},
 {"key":"microgame.TraceShape.command", "value":"Fill in!"},
+{"key":"microgame.RockBand.command", "value":"Rock!"},
 {"key":"microgame.MasterSparkCode.command", "value":"Cast!"},
 {"key":"microgame.YukariCake.command", "value":"Snatch!"},
 {"key":"microgame.RemiCover.command", "value":"Shade!"},
-{"key":"microgame.TouhouSort.command", "value":"Drag and Sort!"},
+{"key":"microgame.TouhouSort.command", "value":"Sort by {var.TouhouSort.cat}!"},
 {"key":"microgame.Potion.ingredients", "value":"Ingredients"},
 {"key":"microgame.CupShuffle.command.b", "value":"Choose!"},
+{"key":"microgame.TouhouSort.hat", "value":"headwear"},
+{"key":"microgame.TouhouSort.wing", "value":"wing type"},
 {"key":"microgame.FreezeFrogs.igname", "value":"Frosty Frogs"},
 {"key":"microgame.Slingshot.igname", "value":"Heads Up"},
 {"key":"microgame.ChenFood.igname", "value":"Purrmaid"},
