--- a/Assets/StreamingAssets/Languages/Russian.json
+++ b/Assets/StreamingAssets/Languages/Russian.json
@@ -7,6 +7,7 @@
 {"key":"stage.levelup", "value":"СЛЕДУЮЩИЙ УРОВЕНЬ!"},
 {"key":"microgame.FreezeFrogs.command", "value":"Заморозь!"},
 {"key":"microgame.Slingshot.command", "value":"Рогатка!"},
+{"key":"microgame.ChenFood.command", "value":"Не будь съеденой!"},
 {"key":"microgame.Spider.command", "value":"Накорми!"},
 {"key":"microgame.Donation.command", "value":"Поймай 3!"},
 {"key":"microgame.Wrench.command", "value":"Закрути!"},
@@ -15,8 +16,9 @@
 {"key":"microgame.Spaceship.command", "value":"Поехали!"},
 {"key":"microgame.CupShuffle.command", "value":"Следи!"},
 {"key":"microgame.TraceShape.command", "value":"Закрась!"},
+{"key":"microgame.RockBand.command", "value":"Рок!"},
 {"key":"microgame.MasterSparkCode.command", "value":"Заклинай!"},
+{"key":"microgame.YukariCake.command", "value":"Утащи!"},
 {"key":"microgame.RemiCover.command", "value":"Прикрой!"},
-{"key":"microgame.TouhouSort.command", "value":"Тяни и сортируй!"},
 {"key":"microgame.Potion.ingredients", "value":"Ингредиенты"},
 {"key":"microgame.CupShuffle.command.b", "value":"Выбери!"}]}
