--- a/Assets/StreamingAssets/Languages/English.json
+++ b/Assets/StreamingAssets/Languages/English.json
@@ -20,7 +20,7 @@
 {"key":"microgame.MasterSparkCode.command", "value":"Cast!"},
 {"key":"microgame.YukariCake.command", "value":"Snatch!"},
 {"key":"microgame.RemiCover.command", "value":"Shade!"},
-{"key":"microgame.TouhouSort.command", "value":"Sort by {var.TouhouSort.cat}!"},
+{"key":"microgame.TouhouSort.command", "value":"Sort by {0}!"},
 {"key":"microgame.Potion.ingredients", "value":"Ingredients"},
 {"key":"microgame.CupShuffle.command.b", "value":"Choose!"},
 {"key":"microgame.TouhouSort.hat", "value":"headwear"},
